--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,24 @@
     android:layout_height="match_parent"
     tools:context="ru.artempugachev.myweather.MainActivity">
 
+
+    <ImageView
+        android:layout_width="@dimen/main_weather_icon"
+        android:layout_height="@dimen/main_weather_icon"
+        android:src="@drawable/weather_cloudy"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="@dimen/main_weather_icon_margin_top"
+        android:id="@+id/imageView" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:text="@string/temp_default"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+        android:layout_marginTop="@dimen/margin_small"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintRight_toLeftOf="@+id/imageView"
+        app:layout_constraintLeft_toRightOf="@+id/imageView"/>
 </android.support.constraint.ConstraintLayout>
