--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,43 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="ru.artempugachev.myweather.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="ru.artempugachev.myweather.MainActivity">
 
 
-    <ImageView
-        android:layout_width="@dimen/main_weather_icon"
-        android:layout_height="@dimen/main_weather_icon"
-        android:src="@drawable/weather_cloudy"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="@dimen/main_weather_icon_margin_top"
-        android:id="@+id/weatherIcon" />
+        <ImageView
+            android:layout_width="@dimen/main_weather_icon"
+            android:layout_height="@dimen/main_weather_icon"
+            android:src="@drawable/weather_cloudy"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="@dimen/main_weather_icon_margin_top"
+            android:id="@+id/weatherIcon" />
 
-    <TextView
-        android:id="@+id/tvTemperature"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/temp_default"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-        android:layout_marginTop="@dimen/margin_small"
-        app:layout_constraintTop_toBottomOf="@+id/weatherIcon"
-        app:layout_constraintRight_toLeftOf="@+id/weatherIcon"
-        app:layout_constraintLeft_toRightOf="@+id/weatherIcon"
-        />
+        <TextView
+            android:id="@+id/tvTemperature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/temp_default"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+            android:layout_marginTop="@dimen/margin_small"
+            app:layout_constraintTop_toBottomOf="@+id/weatherIcon"
+            app:layout_constraintRight_toLeftOf="@+id/weatherIcon"
+            app:layout_constraintLeft_toRightOf="@+id/weatherIcon"
+            />
 
-    <TextView
-        android:id="@+id/tvWeather"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_small"
-        app:layout_constraintTop_toBottomOf="@id/tvTemperature"
-        app:layout_constraintRight_toLeftOf="@+id/tvTemperature"
-        app:layout_constraintLeft_toRightOf="@+id/tvTemperature"
-        android:text="@string/weather_default"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        />
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/tvWeather"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_small"
+            app:layout_constraintTop_toBottomOf="@id/tvTemperature"
+            app:layout_constraintRight_toLeftOf="@+id/tvTemperature"
+            app:layout_constraintLeft_toRightOf="@+id/tvTemperature"
+            android:text="@string/weather_default"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            />
+    </android.support.constraint.ConstraintLayout>
+</layout>
