--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
@@ -7,6 +8,9 @@
         android:layout_height="match_parent"
         tools:context="ru.artempugachev.myweather.MainActivity">
 
+        <data>
+            <variable name="weatherData" type="ru.artempugachev.myweather.WeatherData"/>
+        </data>
 
         <ImageView
             android:layout_width="@dimen/main_weather_icon"
@@ -22,7 +26,7 @@
             android:id="@+id/tvTemperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/temp_default"
+            android:text="@{weatherData.temperature}"
             android:textAppearance="@style/TextAppearance.AppCompat.Display4"
             android:layout_marginTop="@dimen/margin_small"
             app:layout_constraintTop_toBottomOf="@+id/weatherIcon"
