--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,7 @@
         android:layout_height="match_parent"
         tools:context="ru.artempugachev.myweather.MainActivity">
 
-        <data>
-            <variable name="weatherData" type="ru.artempugachev.myweather.WeatherData"/>
-        </data>
+
 
         <ImageView
             android:layout_width="@dimen/main_weather_icon"
@@ -26,7 +24,7 @@
             android:id="@+id/tvTemperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{weatherData.temperature}"
+            android:text="@string/temp_default"
             android:textAppearance="@style/TextAppearance.AppCompat.Display4"
             android:layout_marginTop="@dimen/margin_small"
             app:layout_constraintTop_toBottomOf="@+id/weatherIcon"
