--- a/app/src/main/res/layout/wind_arrow.xml
+++ b/app/src/main/res/layout/wind_arrow.xml
@@ -5,5 +5,6 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@drawable/wind_south_east"
         />
 </FrameLayout>
