--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:my_weather="http://schemas.android.com/apk/res-auto">
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -43,5 +44,16 @@
             android:text="@string/weather_default"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             />
+
+        <ru.artempugachev.myweather.WindArrow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_small"
+            app:layout_constraintTop_toBottomOf="@id/tvWeather"
+            app:layout_constraintRight_toLeftOf="@+id/tvWeather"
+            app:layout_constraintLeft_toRightOf="@+id/tvWeather"
+            my_weather:wind_dir="0"
+            />
+
     </android.support.constraint.ConstraintLayout>
 </layout>
