--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,56 +8,70 @@
     <data>
         <variable name="weatherData" type="ru.artempugachev.myweather.weather.WeatherData"/>
     </data>
-
-    <android.support.constraint.ConstraintLayout
+    
+    <android.support.v4.widget.DrawerLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="ru.artempugachev.myweather.MainActivity">
+        android:id="@+id/drawer_layout"
+        >
+
+        <ListView
+            android:id="@+id/navList"
+            android:layout_width="@dimen/drawer_width"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@color/drawer"/>
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="ru.artempugachev.myweather.MainActivity">
 
 
-        <ImageView
-            android:layout_width="@dimen/main_weather_icon"
-            android:layout_height="@dimen/main_weather_icon"
-            android:src="@{weatherData.weatherIcon}"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="@dimen/main_weather_icon_margin_top"
-            android:id="@+id/weatherIcon" />
+            <ImageView
+                android:layout_width="@dimen/main_weather_icon"
+                android:layout_height="@dimen/main_weather_icon"
+                android:src="@{weatherData.weatherIcon}"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="@dimen/main_weather_icon_margin_top"
+                android:id="@+id/weatherIcon" />
 
-        <TextView
-            android:id="@+id/tvTemperature"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{@string/format_temp_celsius(weatherData.temperature)}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-            android:layout_marginTop="@dimen/margin_small"
-            app:layout_constraintTop_toBottomOf="@+id/weatherIcon"
-            app:layout_constraintRight_toLeftOf="@+id/weatherIcon"
-            app:layout_constraintLeft_toRightOf="@+id/weatherIcon"
-            />
+            <TextView
+                android:id="@+id/tvTemperature"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{@string/format_temp_celsius(weatherData.temperature)}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+                android:layout_marginTop="@dimen/margin_small"
+                app:layout_constraintTop_toBottomOf="@+id/weatherIcon"
+                app:layout_constraintRight_toLeftOf="@+id/weatherIcon"
+                app:layout_constraintLeft_toRightOf="@+id/weatherIcon"
+                />
 
-        <TextView
-            android:id="@+id/tvWeather"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_small"
-            app:layout_constraintTop_toBottomOf="@id/tvTemperature"
-            app:layout_constraintRight_toLeftOf="@+id/tvTemperature"
-            app:layout_constraintLeft_toRightOf="@+id/tvTemperature"
-            android:text="@{weatherData.weatherDescription}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            />
+            <TextView
+                android:id="@+id/tvWeather"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_small"
+                app:layout_constraintTop_toBottomOf="@id/tvTemperature"
+                app:layout_constraintRight_toLeftOf="@+id/tvTemperature"
+                app:layout_constraintLeft_toRightOf="@+id/tvTemperature"
+                android:text="@{weatherData.weatherDescription}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                />
 
-        <ru.artempugachev.myweather.weather.WindArrow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_small"
-            android:id="@+id/windArrow"
-            app:layout_constraintTop_toBottomOf="@id/tvWeather"
-            app:layout_constraintRight_toLeftOf="@+id/tvWeather"
-            app:layout_constraintLeft_toRightOf="@+id/tvWeather"
-            my_weather:direction="@{weatherData.wind.direction}"
-            />
-    </android.support.constraint.ConstraintLayout>
+            <ru.artempugachev.myweather.weather.WindArrow
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_small"
+                android:id="@+id/windArrow"
+                app:layout_constraintTop_toBottomOf="@id/tvWeather"
+                app:layout_constraintRight_toLeftOf="@+id/tvWeather"
+                app:layout_constraintLeft_toRightOf="@+id/tvWeather"
+                my_weather:direction="@{weatherData.wind.direction}"
+                />
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v4.widget.DrawerLayout>
 </layout>
