--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="main_weather_icon">96dp</dimen>
     <dimen name="main_weather_icon_margin_top">48dp</dimen>
     <dimen name="margin_small">8dp</dimen>
+    <dimen name="drawer_width">200dp</dimen>
 </resources>
