--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
             android:layout_width="@dimen/drawer_width"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="@color/drawer"/>
+            android:background="@color/drawer"
+            />
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
