--- a/app/src/main/res/layout/forecast_list_item.xml
+++ b/app/src/main/res/layout/forecast_list_item.xml
@@ -12,7 +12,7 @@
     android:paddingTop="@dimen/list_item_padding_vertical">
 
     <ImageView
-        android:id="@+id/weather_icon"
+        android:id="@+id/icon"
         android:layout_width="@dimen/list_icon"
         android:layout_height="@dimen/list_icon"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
@@ -28,11 +28,11 @@
         android:layout_marginStart="@dimen/list_item_date_start_margin"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
-        app:layout_constraintLeft_toRightOf="@+id/weather_icon"
+        app:layout_constraintLeft_toRightOf="@+id/icon"
         tools:text="Today, April 03"/>
 
     <TextView
-        android:id="@+id/weather_description"
+        android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -42,7 +42,7 @@
         tools:text="Rainy"/>
 
     <TextView
-        android:id="@+id/high_temperature"
+        android:id="@+id/max_temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/forecast_temperature_space"
@@ -51,12 +51,12 @@
         android:textColor="@color/primary_text"
         android:textSize="@dimen/forecast_text_size"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
-        app:layout_constraintRight_toLeftOf="@+id/low_temperature"
+        app:layout_constraintRight_toLeftOf="@+id/min_temperature"
         app:layout_constraintTop_toTopOf="@+id/guideline"
         tools:text="19\u00b0"/>
 
     <TextView
-        android:id="@+id/low_temperature"
+        android:id="@+id/min_temperature"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
