--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/tvTemperature"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{@string/format_temp_celsius(weatherData.temperature)}"
+                android:text="@{@string/format_temp(weatherData.temperature)}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                 android:layout_marginTop="@dimen/margin_small"
                 app:layout_constraintTop_toBottomOf="@+id/weatherIcon"
