--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,5 @@
     <dimen name="list_item_low_temperature_text_view_size">48dp</dimen>
     <dimen name="list_item_date_left_margin">16dp</dimen>
     <dimen name="list_item_date_start_margin">@dimen/list_item_date_left_margin</dimen>
+    <dimen name="widget_text_size">36sp</dimen>
 </resources>
