--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,9 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="@dimen/main_weather_icon_margin_top"
-                android:id="@+id/weatherIcon" />
+                android:id="@+id/weatherIcon"
+                android:contentDescription="@string/weather_default"
+                />
 
             <TextView
                 android:id="@+id/tvTemperature"
